tests/setup/virtue-ci-stack-valor.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Sets up a single VPC multi subnet configuration for Galahad/VirtUE
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  NameSuffix:
    Description: Suffix to add to all 'Name' tags for easy searching and viewing.
    Type: String
    MinLength: 1
    MaxLength: 5
    AllowedPattern: '^[a-zA-Z0-9]+$'
Resources:
  VirtUEVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 172.30.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-VPC'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
  VpcPeeringConnection:
    Type: 'AWS::EC2::VPCPeeringConnection'
    Properties:
      VpcId: !Ref VirtUEVPC
      PeerVpcId: vpc-7b661f00
      PeerRoleArn: ec2vpcpeer
  VirtUEAdminSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 172.30.0.0/18
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-AdminSubnet'
      VpcId: !Ref VirtUEVPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 67738caa-8f4c-4750-9a1d-46c08c1432ad
  VirtUEAdminADSecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: >-
        VirtUE Security Group for the VirtUE AD Server on the Administration
        Network
      SecurityGroupEgress: []
      SecurityGroupIngress: []
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-AdminADSecGroup'
      VpcId: !Ref VirtUEVPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 71832af2-469e-4141-a01c-46cc9148bca8
  VirtueAdminADSecGroupEgressGeneralRule:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: 0.0.0.0/0
      Description: General Traffic Out
      FromPort: -1
      IpProtocol: '-1'
      ToPort: -1
      GroupId: !Ref VirtUEAdminADSecGroup
  VirtueAdminADSecGroupEgressUserSecGroupRule:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      Description: Allow Talking to VirtUE User SecGroup
      DestinationSecurityGroupId: !Ref VirtUEUserSecGroup
      FromPort: -1
      IpProtocol: '-1'
      ToPort: -1
      GroupId: !Ref VirtUEAdminADSecGroup
    Metadata:
      'AWS::CloudFormation::Designer':
        id: b5b96545-bb92-479a-895d-1de1849bfd13
  VirtueAdminADSecGroupEgressAdminRule:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      Description: Allow Talking to VirtUE Admin SecGroup
      DestinationSecurityGroupId: !Ref VirtUEAdminSecGroup
      FromPort: -1
      IpProtocol: '-1'
      ToPort: -1
      GroupId: !Ref VirtUEAdminADSecGroup
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 3d8e3e19-0f75-456e-84bc-92790ce0f37b
  VirtueAdminADSecGroupIngressTCPRDPRule:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: 0.0.0.0/0
      Description: RemoteDesktop tcp
      FromPort: 3389
      IpProtocol: tcp
      ToPort: 3389
      GroupId: !Ref VirtUEAdminADSecGroup
  VirtueAdminADSecGroupIngressUDPRDPRule:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: 0.0.0.0/0
      Description: RemoteDesktop udp
      FromPort: 3389
      IpProtocol: udp
      ToPort: 3389
      GroupId: !Ref VirtUEAdminADSecGroup
  VirtueAdminADSecGroupIngressAdminGroupRule:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      Description: Allow Talking From VirtUE Admin SecGroup
      SourceSecurityGroupId: !Ref VirtUEAdminSecGroup
      FromPort: -1
      IpProtocol: '-1'
      ToPort: -1
      GroupId: !Ref VirtUEAdminADSecGroup
  VirtueAdminADSecGroupIngressUserGroupRule:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      Description: Allow Talking From VirtUE User SecGroup
      SourceSecurityGroupId: !Ref VirtUEUserSecGroup
      FromPort: -1
      IpProtocol: '-1'
      ToPort: -1
      GroupId: !Ref VirtUEAdminADSecGroup
  VirtUEAdminSecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: VirtUE Security Group for the VirtUE Administration Network
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: General Traffic Out
          FromPort: -1
          IpProtocol: '-1'
          ToPort: -1
        - Description: Allow Talking to VirtUE User Subnet
          DestinationSecurityGroupId: !Ref VirtUEUserSecGroup
          FromPort: -1
          IpProtocol: '-1'
          ToPort: -1
        - Description: Allow Talking to VirtUE Admin AD Group
          DestinationSecurityGroupId: !Ref VirtUEAdminADSecGroup
          FromPort: -1
          IpProtocol: '-1'
          ToPort: -1
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref VirtUEUserSecGroup
          Description: Allow Talking From VirtUE User Group
          FromPort: -1
          IpProtocol: '-1'
          ToPort: -1
        - CidrIp: 0.0.0.0/0
          Description: SSH Traffic In
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: Excalibur Web Traffic In
          FromPort: 8080
          IpProtocol: tcp
          ToPort: 8080
        - Description: Allow Talking From VirtUE Admin AD Group
          SourceSecurityGroupId: !Ref VirtUEAdminADSecGroup
          FromPort: -1
          IpProtocol: '-1'
          ToPort: -1
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-AdminSecGroup'
      VpcId: !Ref VirtUEVPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6956c45c-f724-45a2-bd2a-51bad1a6aa31
  VirtUEUserSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 172.30.64.0/18
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-UserSubnet'
      VpcId: !Ref VirtUEVPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ad81820f-7d1f-40c1-b150-f3a261eed78e
  VirtUEUserSecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: VirtUE Security Group for the VirtUE User Network
      SecurityGroupEgress: []
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: SSH Traffic In
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-UserSecGroup'
      VpcId: !Ref VirtUEVPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6b05a85d-589e-42c1-8a1b-30a7d31e59a5
  VirtueUserSecGroupEgressAdminRule:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      Description: Allow Talking to VirtUE Admin SecGroup
      DestinationSecurityGroupId: !Ref VirtUEAdminSecGroup
      FromPort: -1
      IpProtocol: '-1'
      ToPort: -1
      GroupId: !Ref VirtUEUserSecGroup
    Metadata:
      'AWS::CloudFormation::Designer':
        id: dc4ad29b-cb51-4269-a61a-5c2484aacd6d
  VirtueUserSecGroupEgressAdminADRule:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      Description: Allow Talking to VirtUE Admin AD SecGroup
      DestinationSecurityGroupId: !Ref VirtUEAdminADSecGroup
      FromPort: -1
      IpProtocol: '-1'
      ToPort: -1
      GroupId: !Ref VirtUEUserSecGroup
    Metadata:
      'AWS::CloudFormation::Designer':
        id: dc51fbeb-4bb2-4bba-9e04-1a0ea8723391
  VirtueUserSecGroupIngressAdminRule:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allow Talking From VirtUE Admin SecGroup
      SourceSecurityGroupId: !Ref VirtUEAdminSecGroup
      FromPort: -1
      IpProtocol: '-1'
      ToPort: -1
      GroupId: !Ref VirtUEUserSecGroup
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 1543a65e-6033-4084-858d-c85facebc515
  VirtueUserSecGroupIngressAdminADRule:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allow Talking From VirtUE Admin AD Group
      SourceSecurityGroupId: !Ref VirtUEAdminADSecGroup
      FromPort: -1
      IpProtocol: '-1'
      ToPort: -1
      GroupId: !Ref VirtUEUserSecGroup
    Metadata:
      'AWS::CloudFormation::Designer':
        id: b69b85ae-57f2-45f3-a7d5-749d4c05a68f
  VirtUEUserStandBySecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: VirtUE Security Group for the VirtUE User Standby Instance Pool.
      SecurityGroupEgress: []
      SecurityGroupIngress: []
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-UserStandBySecGroup'
      VpcId: !Ref VirtUEVPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: b654bec3-933c-4fdc-9bad-9370e057a2aa
  VirtueInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-InternetGateway'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ad59040a-ea74-4f74-9b2a-227ef777b2fd
  VirtueInternetGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref VirtueInternetGateway
      VpcId: !Ref VirtUEVPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 5fdc6062-76d8-4a63-a9fe-d1557a287503
  VirtUEUserSubnetRT:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VirtUEVPC
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-UserSubnetRT'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: adaa05ff-59a4-46f4-9abb-fa6c41be11fc
  VirtUEUserSubnetRTAss:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref VirtUEUserSubnetRT
      SubnetId: !Ref VirtUEUserSubnet
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 5a8894e4-f19e-4b53-a8f2-375d0afbd44f
  VirtUEUserSubnetPublicRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VirtueInternetGateway
      RouteTableId: !Ref VirtUEUserSubnetRT
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 055fd5b2-8ba1-4922-b981-6d7b32654477
  VirtUEAdminSubnetRT:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VirtUEVPC
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-AdminSubnetRT'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 813df16b-433c-4abb-8a3e-f9cea9a2f070
  VirtUEAdminSubnetRTAss:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref VirtUEAdminSubnetRT
      SubnetId: !Ref VirtUEAdminSubnet
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 87c1b0a3-f505-4a66-b7ac-099eb9f331be
  VirtUEAdminSubnetPublicRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VirtueInternetGateway
      RouteTableId: !Ref VirtUEAdminSubnetRT
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 38f4321f-2e39-4d4d-9ae3-f284858e467a
  ExcaliburServer:
    Type: 'AWS::EC2::Instance'
    Metadata:
      Placeholder: Placeholder
      'AWS::CloudFormation::Designer':
        id: 8b2f1290-e334-4658-a135-cc1c90490a95
    DependsOn: VirtUEAdminSubnet
    Properties:
      ImageId: ami-aa2ea6d0
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.44
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-Excalibur'
  CanvasInstance:
    Type: 'AWS::EC2::Instance'
    DependsOn:
      - VirtUEUserSubnet
    Properties:
      ImageId: ami-0abd33cde76960d90
      InstanceType: t2.small
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.50
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-Canvas'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: e9c93c29-c0da-46b8-ace8-eb676a19f75b
  GalahadAD:
    Type: 'AWS::EC2::Instance'
    DependsOn: VirtUEAdminSubnet
    Properties:
      ImageId: ami-02b219c7e867985a6
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.250
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-AD'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 68877995-2688-4f77-ada0-d5a20f1993a1
  RethinkDB:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-04b887e2a2d0bdccd
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.45
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-RethinkDB'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: fe4cb710-9d04-4d36-ad75-a4618b061225
    DependsOn:
      - VirtUEAdminSubnet
  GalahadAggregator:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-05f321f770c6ea359
      InstanceType: t2.large
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.46
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-Aggregator'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 8ec5f0f9-4760-4b01-8173-36cd5a15e77a
    DependsOn:
      - VirtUEAdminSubnet
  Valor1:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-0c1311feb3894b559
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.51
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-Valor1'
      UserData:
        Fn::Base64: !Sub |
           #!/bin/bash
           mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport fs-de078b96.efs.us-east-1.amazonaws.com:/export /mnt/nfs/
           cp -R /mnt/nfs/deploy/compute/config /home/ubuntu
           cd /home/ubuntu/config
           /bin/bash setup.sh
           reboot
    Metadata:
      'AWS::CloudFormation::Designer':
        id: d26811c6-a6d2-4919-836a-dffd2b036d5a
    DependsOn:
      - VirtUEAdminSubnet
  Valor2:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-0c1311feb3894b559
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.52
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-Valor2'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 5ef7fb52-d150-41a1-98e6-51c218ff9428
    DependsOn:
      - VirtUEAdminSubnet
  ValorRouter:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-0c1311feb3894b559
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.53
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-ValorRouter'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 34ff3445-31dc-45b2-98b4-75b5e0fac6d2
    DependsOn:
      - VirtUEAdminSubnet
  ValorRethinkDB:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-aa2ea6d0
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.54
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-ValorRethinkDB'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: c315a46e-af55-415e-b15b-ce49553956fc
    DependsOn:
      - VirtUEAdminSubnet
Outputs: {}
Metadata:
  'AWS::CloudFormation::Designer':
    ad59040a-ea74-4f74-9b2a-227ef777b2fd:
      size:
        width: 60
        height: 60
      position:
        x: -1590
        'y': 520
      z: 2
      parent: 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
      embeds: []
    10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f:
      size:
        width: 1020
        height: 910
      position:
        x: -2220
        'y': -250
      z: 1
      embeds:
        - ad59040a-ea74-4f74-9b2a-227ef777b2fd
        - 813df16b-433c-4abb-8a3e-f9cea9a2f070
        - adaa05ff-59a4-46f4-9abb-fa6c41be11fc
        - b654bec3-933c-4fdc-9bad-9370e057a2aa
        - 6b05a85d-589e-42c1-8a1b-30a7d31e59a5
        - ad81820f-7d1f-40c1-b150-f3a261eed78e
        - 71832af2-469e-4141-a01c-46cc9148bca8
        - 67738caa-8f4c-4750-9a1d-46c08c1432ad
        - c315a46e-af55-415e-b15b-ce49553956fc
        - 34ff3445-31dc-45b2-98b4-75b5e0fac6d2
        - 5ef7fb52-d150-41a1-98e6-51c218ff9428
        - d26811c6-a6d2-4919-836a-dffd2b036d5a
    813df16b-433c-4abb-8a3e-f9cea9a2f070:
      size:
        width: 390
        height: 330
      position:
        x: -2190
        'y': 140
      z: 2
      parent: 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
      embeds:
        - 38f4321f-2e39-4d4d-9ae3-f284858e467a
      iscontainedinside:
        - 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
    38f4321f-2e39-4d4d-9ae3-f284858e467a:
      size:
        width: 60
        height: 60
      position:
        x: -2130
        'y': 230
      z: 3
      parent: 813df16b-433c-4abb-8a3e-f9cea9a2f070
      embeds: []
      isassociatedwith:
        - ad59040a-ea74-4f74-9b2a-227ef777b2fd
      iscontainedinside:
        - 813df16b-433c-4abb-8a3e-f9cea9a2f070
    adaa05ff-59a4-46f4-9abb-fa6c41be11fc:
      size:
        width: 390
        height: 330
      position:
        x: -2190
        'y': -40
      z: 2
      parent: 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
      embeds:
        - 055fd5b2-8ba1-4922-b981-6d7b32654477
      iscontainedinside:
        - 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
    055fd5b2-8ba1-4922-b981-6d7b32654477:
      size:
        width: 60
        height: 60
      position:
        x: -2130
        'y': 80
      z: 3
      parent: adaa05ff-59a4-46f4-9abb-fa6c41be11fc
      embeds: []
      isassociatedwith:
        - ad59040a-ea74-4f74-9b2a-227ef777b2fd
      iscontainedinside:
        - adaa05ff-59a4-46f4-9abb-fa6c41be11fc
    5fdc6062-76d8-4a63-a9fe-d1557a287503:
      source:
        id: 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
      target:
        id: ad59040a-ea74-4f74-9b2a-227ef777b2fd
      z: 2
    b654bec3-933c-4fdc-9bad-9370e057a2aa:
      size:
        width: 60
        height: 60
      position:
        x: -1380
        'y': -190
      z: 2
      parent: 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
      embeds: []
      iscontainedinside:
        - 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
    6b05a85d-589e-42c1-8a1b-30a7d31e59a5:
      size:
        width: 60
        height: 60
      position:
        x: -1500
        'y': -100
      z: 2
      parent: 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
      embeds: []
      iscontainedinside:
        - 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
    ad81820f-7d1f-40c1-b150-f3a261eed78e:
      size:
        width: 510
        height: 510
      position:
        x: -1800
        'y': -160
      z: 2
      parent: 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
      embeds:
        - 6956c45c-f724-45a2-bd2a-51bad1a6aa31
      iscontainedinside:
        - 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
    5a8894e4-f19e-4b53-a8f2-375d0afbd44f:
      source:
        id: adaa05ff-59a4-46f4-9abb-fa6c41be11fc
      target:
        id: ad81820f-7d1f-40c1-b150-f3a261eed78e
      z: 2
    71832af2-469e-4141-a01c-46cc9148bca8:
      size:
        width: 60
        height: 60
      position:
        x: -1350
        'y': 50
      z: 2
      parent: 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
      embeds: []
      iscontainedinside:
        - 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
    b69b85ae-57f2-45f3-a7d5-749d4c05a68f:
      source:
        id: 71832af2-469e-4141-a01c-46cc9148bca8
      target:
        id: 6b05a85d-589e-42c1-8a1b-30a7d31e59a5
      z: 2
    dc51fbeb-4bb2-4bba-9e04-1a0ea8723391:
      source:
        id: 71832af2-469e-4141-a01c-46cc9148bca8
      target:
        id: 6b05a85d-589e-42c1-8a1b-30a7d31e59a5
      z: 2
    6956c45c-f724-45a2-bd2a-51bad1a6aa31:
      size:
        width: 60
        height: 60
      position:
        x: -1500
        'y': 200
      z: 3
      parent: ad81820f-7d1f-40c1-b150-f3a261eed78e
      embeds: []
      iscontainedinside:
        - 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
    1543a65e-6033-4084-858d-c85facebc515:
      source:
        id: 6956c45c-f724-45a2-bd2a-51bad1a6aa31
      target:
        id: 6b05a85d-589e-42c1-8a1b-30a7d31e59a5
      z: 3
    dc4ad29b-cb51-4269-a61a-5c2484aacd6d:
      source:
        id: 6956c45c-f724-45a2-bd2a-51bad1a6aa31
      target:
        id: 6b05a85d-589e-42c1-8a1b-30a7d31e59a5
      z: 3
    3d8e3e19-0f75-456e-84bc-92790ce0f37b:
      source:
        id: 6956c45c-f724-45a2-bd2a-51bad1a6aa31
      target:
        id: 71832af2-469e-4141-a01c-46cc9148bca8
      z: 3
    b5b96545-bb92-479a-895d-1de1849bfd13:
      source:
        id: 6b05a85d-589e-42c1-8a1b-30a7d31e59a5
      target:
        id: 71832af2-469e-4141-a01c-46cc9148bca8
      z: 2
    67738caa-8f4c-4750-9a1d-46c08c1432ad:
      size:
        width: 240
        height: 240
      position:
        x: -1800
        'y': 110
      z: 2
      parent: 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
      embeds:
        - 8ec5f0f9-4760-4b01-8173-36cd5a15e77a
        - fe4cb710-9d04-4d36-ad75-a4618b061225
        - 68877995-2688-4f77-ada0-d5a20f1993a1
        - e9c93c29-c0da-46b8-ace8-eb676a19f75b
        - 8b2f1290-e334-4658-a135-cc1c90490a95
      iscontainedinside:
        - 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
    8b2f1290-e334-4658-a135-cc1c90490a95:
      size:
        width: 60
        height: 60
      position:
        x: -1740
        'y': 200
      z: 3
      parent: 67738caa-8f4c-4750-9a1d-46c08c1432ad
      embeds: []
      isassociatedwith:
        - 6956c45c-f724-45a2-bd2a-51bad1a6aa31
      dependson:
        - 67738caa-8f4c-4750-9a1d-46c08c1432ad
    87c1b0a3-f505-4a66-b7ac-099eb9f331be:
      source:
        id: 813df16b-433c-4abb-8a3e-f9cea9a2f070
      target:
        id: 67738caa-8f4c-4750-9a1d-46c08c1432ad
      z: 2
    e9c93c29-c0da-46b8-ace8-eb676a19f75b:
      size:
        width: 60
        height: 60
      position:
        x: -1640
        'y': 250
      z: 3
      parent: 67738caa-8f4c-4750-9a1d-46c08c1432ad
      embeds: []
      iscontainedinside:
        - 67738caa-8f4c-4750-9a1d-46c08c1432ad
      dependson:
        - ad81820f-7d1f-40c1-b150-f3a261eed78e
    68877995-2688-4f77-ada0-d5a20f1993a1:
      size:
        width: 60
        height: 60
      position:
        x: -1770
        'y': 170
      z: 3
      parent: 67738caa-8f4c-4750-9a1d-46c08c1432ad
      embeds: []
      dependson:
        - 67738caa-8f4c-4750-9a1d-46c08c1432ad
    fe4cb710-9d04-4d36-ad75-a4618b061225:
      size:
        width: 60
        height: 60
      position:
        x: -1650
        'y': 150
      z: 3
      parent: 67738caa-8f4c-4750-9a1d-46c08c1432ad
      embeds: []
      dependson:
        - 67738caa-8f4c-4750-9a1d-46c08c1432ad
    8ec5f0f9-4760-4b01-8173-36cd5a15e77a:
      size:
        width: 60
        height: 60
      position:
        x: -1770
        'y': 270
      z: 3
      parent: 67738caa-8f4c-4750-9a1d-46c08c1432ad
      embeds: []
      dependson:
        - 67738caa-8f4c-4750-9a1d-46c08c1432ad
    d26811c6-a6d2-4919-836a-dffd2b036d5a:
      size:
        width: 60
        height: 60
      position:
        x: -1650
        'y': 380
      z: 2
      parent: 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
      embeds: []
      dependson:
        - 67738caa-8f4c-4750-9a1d-46c08c1432ad
    5ef7fb52-d150-41a1-98e6-51c218ff9428:
      size:
        width: 60
        height: 60
      position:
        x: -1580
        'y': 380
      z: 2
      parent: 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
      embeds: []
      dependson:
        - 67738caa-8f4c-4750-9a1d-46c08c1432ad
    34ff3445-31dc-45b2-98b4-75b5e0fac6d2:
      size:
        width: 60
        height: 60
      position:
        x: -1510
        'y': 380
      z: 2
      parent: 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
      embeds: []
      dependson:
        - 67738caa-8f4c-4750-9a1d-46c08c1432ad
    c315a46e-af55-415e-b15b-ce49553956fc:
      size:
        width: 60
        height: 60
      position:
        x: -1440
        'y': 380
      z: 2
      parent: 10d4fe6c-4d3d-4c8f-b975-8b7cd6603a7f
      embeds: []
      dependson:
        - 67738caa-8f4c-4750-9a1d-46c08c1432ad
