tests/setup/virtue-ci-stack.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Sets up a single VPC Multi Subnet Configuration for Galahad/VirtUE
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair
  NameSuffix:
    Description: Suffix to add to all 'Name' tags for easy searching and viewing
    Type: String
    MinLength: 1
    MaxLength: 5
    AllowedPattern: '^[a-zA-Z0-9]+$'
Resources:
  VirtUEVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 172.30.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-VPC'
  VirtueHostedZone:
    Type: 'AWS::Route53::HostedZone'
    Properties:
      HostedZoneConfig:
        Comment: "VPC-private zone for service discovery"
      HostedZoneTags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-Zone'
      Name: !Join
          - ''
          - - 'galahad.'
            - 'com'
      VPCs:
        - VPCId: !Ref VirtUEVPC
          VPCRegion: !Ref "AWS::Region"
  VirtUEAdminSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 172.30.0.0/18
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-AdminSubnet'
      VpcId: !Ref VirtUEVPC
  VirtUEUserSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 172.30.64.0/18
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-UserSubnet'
      VpcId: !Ref VirtUEVPC
  VirtUEAdminADSecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: >-
        VirtUE Security Group for the VirtUE AD Server on the Administration
        Network
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: General Traffic Out
          FromPort: '-0'
          ToPort: '65535'
          IpProtocol: '-1'
      SecurityGroupIngress:
        - CidrIp: 172.30.0.0/16
          Description: Allow Talking Internally
          FromPort: '0'
          ToPort: '65535'
          IpProtocol: '-1'
        - CidrIp: 0.0.0.0/0
          Description: RDP Inn
          FromPort: '3389'
          ToPort: '3389'
          IpProtocol: '-1'
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-AdminADSecGroup'
      VpcId: !Ref VirtUEVPC
  VirtUEAdminSecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: VirtUE Security Group for the VirtUE Administration Network
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: General Traffic Out
          FromPort: '0'
          ToPort: '65535'
          IpProtocol: '-1'
      SecurityGroupIngress:
        - CidrIp: 172.30.0.0/16
          Description: Allow Talking Internally
          FromPort: '0'
          ToPort: '65535'
          IpProtocol: '-1'
        - CidrIp: 0.0.0.0/0
          Description: SSH TCP In
          FromPort: '22'
          ToPort: '22'
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          Description: HTTP TCP In
          FromPort: '8080'
          ToPort: '8080'
          IpProtocol: tcp
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-AdminSecGroup'
      VpcId: !Ref VirtUEVPC
  VirtUEUserSecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: VirtUE Security Group for the VirtUE User Network
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/16
          Description: General Traffic Out
          FromPort: '0'
          ToPort: '65535'
          IpProtocol: '-1'
      SecurityGroupIngress:
        - CidrIp: 172.30.0.0/16
          Description: AllowTalkingInternally
          FromPort: '0'
          ToPort: '65535'
          IpProtocol: '-1'
        - CidrIp: 0.0.0.0/0
          Description: SSH TCP In
          FromPort: '22'
          ToPort: '22'
          IpProtocol: tcp
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-UserSecGroup'
      VpcId: !Ref VirtUEVPC
  VirtUEUserStandbySecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: VirtUE Security Group for the VirtUE User Standby Instance Pool.
      SecurityGroupEgress: []
      SecurityGroupIngress: []
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-UserStandbySecGroup'
      VpcId: !Ref VirtUEVPC
  VirtUEEFSSecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: VirtUE Security Group for the VirtUE EFS Target.
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: General Traffic Out
          FromPort: '0'
          ToPort: '65535'
          IpProtocol: '-1'
      SecurityGroupIngress:
        - CidrIp: 172.30.0.0/16
          Description: Allow Talking Internally
          FromPort: '0'
          ToPort: '65535'
          IpProtocol: '-1'
        - CidrIp: 18.210.83.5/32
          Description: VirtUE NFS Server In
          FromPort: '0'
          ToPort: '65535'
          IpProtocol: '-1'
        - CidrIp: 0.0.0.0/0
          Description: HTTP TCP In
          FromPort: '80'
          ToPort: '80'
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          Description: SSH TCP In
          FromPort: '22'
          ToPort: '22'
          IpProtocol: tcp
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-EFSSecGroup'
      VpcId: !Ref VirtUEVPC
  VirtueNFSServerSecGroupNFSIngressRule:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allow NFS Server to be contacted from local EFS Server
      CidrIp: !Join
        - ''
        - - !GetAtt ValorEFSServer.PublicIp
          - '/32'
      FromPort: 2049
      IpProtocol: tcp
      ToPort: 2049
      GroupId: sg-08dabbf530b426156
    DependsOn: ValorEFSServer
  VirtueInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-InternetGateway'
  VirtueInternetGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref VirtueInternetGateway
      VpcId: !Ref VirtUEVPC
  VirtUEUserSubnetRT:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VirtUEVPC
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-UserSubnetRT'
  VirtUEUserSubnetRTAss:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref VirtUEUserSubnetRT
      SubnetId: !Ref VirtUEUserSubnet
  VirtUEUserSubnetPublicRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VirtueInternetGateway
      RouteTableId: !Ref VirtUEUserSubnetRT
  VirtUEAdminSubnetRT:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VirtUEVPC
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-AdminSubnetRT'
  VirtUEAdminSubnetRTAss:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref VirtUEAdminSubnetRT
      SubnetId: !Ref VirtUEAdminSubnet
  VirtUEAdminSubnetPublicRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VirtueInternetGateway
      RouteTableId: !Ref VirtUEAdminSubnetRT
  ExcaliburServer:
    Type: 'AWS::EC2::Instance'
    DependsOn: VirtUEAdminSubnet
    Properties:
      ImageId: ami-aa2ea6d0
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.44
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-Excalibur'
  CanvasInstance:
    Type: 'AWS::EC2::Instance'
    DependsOn:
      - VirtUEUserSubnet
    Properties:
      ImageId: ami-0abd33cde76960d90
      InstanceType: t2.small
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.50
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-Canvas'
  GalahadAD:
    Type: 'AWS::EC2::Instance'
    DependsOn: VirtUEAdminSubnet
    Properties:
      ImageId: ami-001116e564201bcb4
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.250
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-AD'
  RethinkDB:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-04b887e2a2d0bdccd
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.45
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-RethinkDB'
    DependsOn:
      - VirtUEAdminSubnet
  GalahadAggregator:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-066b9b7e204233efd
      InstanceType: t2.large
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.46
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-Aggregator'
  VirtUEValorEFS:
    Type: 'AWS::EFS::FileSystem'
    Properties:
      FileSystemTags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-ValorEFS'
  VirtUEValorEFSTarget:
    Type: 'AWS::EFS::MountTarget'
    DependsOn:
      - VirtUEValorEFS
    Properties:
      FileSystemId: !Ref VirtUEValorEFS
      SecurityGroups:
        - !Ref VirtUEAdminSecGroup
      SubnetId: !Ref VirtUEAdminSubnet
  ValorEFSServer:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-aa2ea6d0
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          GroupSet:
            - !Ref VirtUEEFSSecGroup
          PrivateIpAddress: 172.30.1.47
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-ValorEFSServer'
  ValorRethinkDB:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-a4dc46db
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.54
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-ValorRethinkDB'
    DependsOn:
      - VirtUEAdminSubnet
  ValorRouter:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-01c5d8354c604b662
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.53
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-ValorRouter'
    DependsOn:
      - VirtUEAdminSubnet
      - VirtUEValorEFSTarget
      - ValorRethinkDB
  ValorNode51:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-01c5d8354c604b662
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.51
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-ValorNode51'
    DependsOn:
      - VirtUEAdminSubnet
      - VirtUEValorEFSTarget
      - ValorRethinkDB
  ValorNode52:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-01c5d8354c604b662
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          PrivateIpAddress: 172.30.1.52
          SubnetId: !Ref VirtUEAdminSubnet
      Tags:
        - Key: Project
          Value: Virtue
        - Key: Name
          Value: !Join
            - ''
            - - VirtUE-
              - !Ref NameSuffix
              - '-ValorNode52'
    DependsOn:
      - VirtUEAdminSubnet
      - VirtUEValorEFSTarget
      - ValorRethinkDB
  ExcaliburServerDNSRecord:
    Type: 'AWS::Route53::RecordSet'
    Properties:
      HostedZoneId: !Ref VirtueHostedZone
      Name: !Join
          - ''
          - - 'excalibur.'
            - 'galahad.'
            - 'com'
            - '.'
      Type: A
      TTL: '900'
      ResourceRecords:
        - !GetAtt ExcaliburServer.PrivateIp
    DependsOn:
        - VirtueHostedZone
        - ExcaliburServer
  GalahadADDNSRecord:
    Type: 'AWS::Route53::RecordSet'
    Properties:
      HostedZoneId: !Ref VirtueHostedZone
      Name: !Join
          - ''
          - - 'ad.'
            - 'galahad.'
            - 'com'
            - '.'
      Type: A
      TTL: '900'
      ResourceRecords:
        - !GetAtt GalahadAD.PrivateIp
    DependsOn:
        - VirtueHostedZone
        - GalahadAD
  RethinkDBDNSRecord:
    Type: 'AWS::Route53::RecordSet'
    Properties:
      HostedZoneId: !Ref VirtueHostedZone
      Name: !Join
          - ''
          - - 'rethinkdb.'
            - 'galahad.'
            - 'com'
            - '.'
      Type: A
      TTL: '900'
      ResourceRecords:
        - !GetAtt RethinkDB.PrivateIp
    DependsOn:
        - VirtueHostedZone
        - RethinkDB
  ValorEFSServerDNSRecord:
    Type: 'AWS::Route53::RecordSet'
    Properties:
      HostedZoneId: !Ref VirtueHostedZone
      Name: !Join
          - ''
          - - 'efs-server.'
            - 'galahad.'
            - 'com'
            - '.'
      Type: A
      TTL: '900'
      ResourceRecords:
        - !GetAtt ValorEFSServer.PrivateIp
    DependsOn:
        - VirtueHostedZone
        - ValorEFSServer
  ValorRouterDNSRecord:
    Type: 'AWS::Route53::RecordSet'
    Properties:
      HostedZoneId: !Ref VirtueHostedZone
      Name: !Join
          - ''
          - - 'valor-router.'
            - 'galahad.'
            - 'com'
            - '.'
      Type: A
      TTL: '900'
      ResourceRecords:
        - !GetAtt ValorRouter.PrivateIp
    DependsOn:
        - VirtueHostedZone
        - ValorRouter
  GalahadAggregatorDNSRecord:
    Type: 'AWS::Route53::RecordSet'
    Properties:
      HostedZoneId: !Ref VirtueHostedZone
      Name: !Join
          - ''
          - - 'aggregator.'
            - 'galahad.'
            - 'com'
            - '.'
      Type: A
      TTL: '900'
      ResourceRecords:
        - !GetAtt GalahadAggregator.PrivateIp
    DependsOn:
        - VirtueHostedZone
        - GalahadAggregator
Outputs:
  MountTargetID:
    Description: Mount target ID
    Value: !Ref VirtUEValorEFSTarget
  FileSystemID:
    Description: File system ID
    Value: !Ref VirtUEValorEFS
